<resources>
    <string name="app_name">Enerd</string>
    <string name="login">Login...</string>
    <string name="usuario">Usuario...</string>
    <string name="senha">Senha...</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="j_possui_uma_conta_aperte_para_fazer_o_login">Já possui uma conta? Aperte para fazer o Login</string>
    <string name="meus_an_ncios">Meus Anúncios</string>
    <string name="sair">Sair</string>
    <string name="cadastrar_entrar">Cadastrar / Entrar</string>
    <string name="title_activity_meus_anuncios">Meus Anúncio</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    
    <string-array name="Estados">
        <item>Estados</item>
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
        <item>DF</item>

    </string-array>
    
    <string-array name="Categoria">
        <item>Tipo</item>
        <item>Novo</item>
        <item>Usado</item>

    </string-array>

</resources>